src/style/internal/shared_input-select-picker.scss
// Visual styles that unify the look & feel and behavior of
// components such as input fields, select dropdowns and pickers

$lime-text-field-bottom-outline-color: rgba(var(--contrast-700), 0.65);
$lime-text-field-bottom-outline-color-hover: rgba(var(--contrast-700), 1);

$background-color-normal: rgba(var(--contrast-200), 0.5);
$background-color-hovered: rgba(var(--contrast-200), 1);
$background-color-focused: rgba(var(--contrast-100), 0.8);
$background-color-disabled: transparent;
$label-color: rgba(var(--contrast-1200), 1);
$label-color-disabled: rgba(var(--contrast-1200), 0.5);

$height-of-mdc-text-field: 3.5rem; //This is written directly in rem, beucase the vaiable used to calculate things elsewhere

$mdc-chip-background-color: #fff;

$floating-label-top-value: pxToRem(
    27
); // this overrides MD's original top value which is top: 50%. The reason is that we have fields or pickers which can have multiple rows, and a % value aligns the label in a wrong position

$height-of-helper-text-pseudo-before: 0.75rem; // There is strange a pseudo before in MD's helper texts, which sets their distance to the element on top of it. Originally in MD, this value is 1rem. In Lime Elements, we need to make it less due to our layout needs.

@mixin looks-disabled() {
    cursor: not-allowed;
    pointer-events: none;
    opacity: 0.4;
}

@mixin looks-like-input-label() {
    font-family: Roboto, sans-serif;
    line-height: pxToRem(28);
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;

    font-size: pxToRem(14);
    font-weight: 400;
    letter-spacing: 0.009375em;
    color: $label-color;
}

@mixin label--float-above() {
    transform: translateY(-2.38rem) scale(0.75);
    font-size: pxToRem(16);
}

@mixin looks-like-helper-line {
    padding-right: 1rem;
    padding-left: 1rem;
}

@mixin looks-like-helper-text {
    font-family: Roboto, sans-serif;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    font-size: 0.6875rem;
    font-weight: 400;
    letter-spacing: 0.0333333333em;
    text-decoration: inherit;
    text-transform: inherit;
    display: block;
    margin-top: 0;
    line-height: normal;
    margin: 0;
    transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
    opacity: 0;
}

@mixin looks-like-helper-text-pseudo-before {
    height: $height-of-helper-text-pseudo-before;
    display: inline-block;
    width: 0;
    content: '';
    vertical-align: 0;
}

